<resources>
    <string name="app_name">Food4u</string>
    <string name="navbar">NavBar</string>
    <string name="bag">bag</string>
    <string name="search">Procurar</string>
    <string name="phrase_initial">Deliciosas comidas \npara você!</string>
    <string name="heart">heart</string>
    <string name="home">home</string>
    <string name="history">history</string>
    <string name="person">person</string>
    <string name="image_search">image_search</string>
    <string name="snacks">Lanches</string>
    <string name="drinks">Bebidas</string>
    <string name="combos">Combos</string>
    <string name="salads">Saladas</string>
    <string name="chickens">Frangos</string>
    <string name="ice_cream">Sorvetes</string>
    <string name="snack_x_bacon">X-Bacon</string>
    <string name="snack_x_frango">X-Frango</string>
    <string name="snack_x_egg">X-Egg</string>
    <string name="price_20">R$ 20,00</string>
    <string name="price_15">R$ 15,00</string>
    <string name="price_18">R$ 18,00</string>
    <string name="drink_coca">Coca Cola</string>
    <string name="drink_pepsi">Pepsi</string>
    <string name="drink_sprite">Sprite</string>
    <string name="price_9">R$ 9,00</string>
    <string name="price_8_5">R$ 8,50</string>
    <string name="price_8">R$ 8,00</string>
    <string name="quantity_less">-</string>
    <string name="quantity_plus">+</string>
    <string name="shopping_basket">shopping_basket</string>
    <string name="phrase_payment">O total do \n seu pedido deu:</string>
    <string name="pay_request">Pagar</string>
    <string name="cancel_request">Cancelar</string>
    <string name="price">R$</string>
</resources>