<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_phrase_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phrase_payment"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linear_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_phrase_total"
        app:layout_constraintBottom_toTopOf="@id/button_pay">

        <TextView
            android:id="@+id/text_r"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/price"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_total_value"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:inputType="none"
            android:focusable="false"
            android:clickable="false"
            android:longClickable="false"
            android:autofillHints=""
            tools:ignore="LabelFor"/>


    </LinearLayout>

    <Button
        android:id="@+id/button_pay"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/pay_request"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/cancel_request"
        android:textSize="18sp"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>